3 August 2010: Wouter
	- updated ldns tarball with bugfixes.
	- release tag 1.4.6.
	- trunk becomes 1.4.7 develop.
	- iana portlist updated.

22 July 2010: Wouter
	- more error details on failed remote control connection.

15 July 2010: Wouter
	- rlimit adjustments for select and ulimit can happen at the same time.

14 July 2010: Wouter
	- Donation text added to README.
	- Fix integer underflow in prefetch ttl creation from cache.  This
	  fixes a potential negative prefetch ttl.

12 July 2010: Wouter
	- Changed the defaults for num-queries-per-thread/outgoing-range.
	  For builtin-select: 512/960, for libevent 1024/4096 and for
	  windows 24/48 (because of win api).  This makes the ratio this way
	  to improve resilience under heavy load.  For high performance, use
	  libevent and possibly higher numbers.

10 July 2010: Wouter
	- GOST enabled if SSL is recent and ldns has GOST enabled too.
	- ldns tarball updated.

9 July 2010: Wouter
	- iana portlist updated.
	- Fix validation of qtype DNSKEY when a key-cache entry exists but
	  no rr-cache entry is used (it expired or prefetch), it then goes
	  back up to the DS or trust-anchor to validate the DNSKEY.

7 July 2010: Wouter
	- Neat function prototypes, unshadowed local declarations.

6 July 2010: Wouter
	- failure to chown the pidfile is not fatal any more.
	- testbound uses UTC timezone.
	- ldns tarball updated (ports and works on Minix 3.1.7).  On Minix, add
	  /usr/gnu/bin to PATH, use ./configure AR=/usr/gnu/bin/gar and gmake.

5 July 2010: Wouter
	- log if a server is skipped because it is on the donotquery list,
	  at verbosity 4, to enable diagnosis why no queries to 127.0.0.1.
	- added feature to print configure date, target and options with -h.
	- added feature to print event backend system details with -h.
	- wdiff is not actually required by make test, updated requirements.

1 July 2010: Wouter
	- Fix RFC4035 compliance with 2.2 statement that the DNSKEY at apex